[package]
name = "cw-submessage-gas-tester"
version = "0.1.0"
authors = ["ekez <zekemedley@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = "1.1.1"
cosmwasm-storage = "1.1.1"
cosmwasm-schema = "1.1.1"
cw-storage-plus = "0.15.0"
thiserror = { version = "1.0.31" }
